<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/word_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/ahoj_svet"
            android:textSize="34sp"
            app:fontFamily="@font/roboto_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/phonetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="20sp"
                android:paddingLeft="30sp"
                android:text="@string/phonetic"
                android:textSize="24sp"
                app:fontFamily="@font/roboto_bold" />

            <Button
                android:id="@+id/listen_button"
                style="?attr/materialIconButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/phonetic"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:contentDescription="@string/ahoj_svet"
                android:drawableLeft="@drawable/baseline_volume_up_24" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginHorizontal="10sp"
            android:background="@color/cards_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="8sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/definitions"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/definition_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/word_layout"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>